@@ -8,6 +8,8 @@ Unreleased
 2015/03/17 0.48.0
 =================
 
+ - Fixed misleading error message for trying to group by invalid data type.
+
  - COPY FROM / COPY TO will now automatically create a quoted URI if only a
    path is given.
 
